<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_inicio"
        android:icon="@drawable/ic_home_black_24dp"
        android:iconTint="@android:color/white"
        android:title="@string/title_nav_inicio" />

    <item
        android:id="@+id/navigation_busqueda"
        android:icon="@drawable/ic_busqueda_24dp"
        android:title="@string/title_nav_busqueda" />

    <!--item
        android:id="@+id/navigation_lectura"
        android:icon="@drawable/ic_lectura_24dp"
        android:title="@string/title_nav_lectura" />!-->

    <item
        android:id="@+id/navigation_coleccion"
        android:icon="@drawable/ic_coleccion_24dp"
        android:title="@string/title_nav_coleccion" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_perfil_24dp"
        android:title="@string/title_nav_perfil" />

</menu>
